# sdk-nrf

./: west.yml
drivers/: CMakeLists.txt  Kconfig
samples/bluetooth/devzone_330156/central/: prj.conf
samples/bluetooth/devzone_330156/central/.cache/clangd/index/: main.c.8C8865A5EFC1CDCB.idx
samples/bluetooth/devzone_330156/central/src/: main.c
samples/bluetooth/devzone_330156/peripheral/: prj.conf
samples/bluetooth/devzone_330156/peripheral/.cache/clangd/index/: main.c.B888BBA8CC8855DB.idx  uart_async_adapter.h.407EA12DB18DDD25.idx
samples/bluetooth/devzone_330156/peripheral/child_image/: hci_ipc.conf
samples/bluetooth/devzone_330156/peripheral/src/: main.c
tests/bluetooth/shell_tests/: conftest.py  main.py  run.sh  test_adv.py
tests/bluetooth/shell_tests/app/hci_sim/: CMakeLists.txt  app.overlay  prj.conf
tests/bluetooth/shell_tests/test_adv_scan/: test_adv_scan.py  test_adv_scan_2.py
